--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
   <title>Balanju Consultancy</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <!-- Favicon and Icons -->
-<link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
-<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/images/favicon/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="512x512" href="/images/favicon/android-chrome-512x512.png">
-<link rel="manifest" href="/images/favicon/site.webmanifest">
-  
+
+<!-- Favicon and Icons -->
+<link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="images/favicon/android-chrome-512x512.png">
+<link rel="manifest" href="images/favicon/site.webmanifest">
+
+
+ <!-- ✅ Logo Structured Data (IMPORTANT for Google) -->
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Organization",
-  "name": "Balanju Consultancy",
-  "url": "https://www.balanju.com",
-  "logo": "https://www.balanju.com/images/favicon/android-chrome-512x512.png"
-}
-</script>
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Balanju Consultancy",
+    "url": "https://www.balanju.com",
+    "logo": "https://www.balanju.com/images/favicon/android-chrome-512x512.png",
+    "sameAs":
+     [
+      "https://www.instagram.com/balanju_consultancy",
+      "https://www.youtube.com/@balanjuconsultancy1"
+    ]
+  }
+  </script>
 
 
   <style>
@@ -930,15 +938,15 @@
         <i class="fas fa-flask"></i>
         Pharma
       </a>
-      <a href="992inter-con.html" class="quick-link">
+      <a href="index-intermediate.html" class="quick-link">
         <i class="fas fa-school"></i>
         Intermediate
       </a>
-      <a href="991schools-con.html" class="quick-link">
+      <a href="index-school.html" class="quick-link">
         <i class="fas fa-chalkboard-teacher"></i>
         Schools
       </a>
-      <a href="index-pharma copy.html" class="quick-link">
+      <a href="index-MBA.html" class="quick-link">
         <i class="fas fa-university"></i>
         MBA
       </a>
