--- a/index.html
+++ b/index.html
@@ -934,7 +934,7 @@
         <i class="fas fa-graduation-cap"></i>
         Degree
       </a>
-      <a href="index-pharma.html" class="quick-link">
+      <a href="1010pharma page.html" class="quick-link">
         <i class="fas fa-flask"></i>
         Pharma
       </a>
