--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
         <i class="fas fa-laptop-code"></i>
         Engineering
       </a>
-      <a href="index-degree.html" class="quick-link">
+      <a href="1010degree page.html" class="quick-link">
         <i class="fas fa-graduation-cap"></i>
         Degree
       </a>
@@ -938,15 +938,15 @@
         <i class="fas fa-flask"></i>
         Pharma
       </a>
-      <a href="index-intermediate.html" class="quick-link">
+      <a href="1010intermediate.html" class="quick-link">
         <i class="fas fa-school"></i>
         Intermediate
       </a>
-      <a href="index-school.html" class="quick-link">
+      <a href="1010school page.html" class="quick-link">
         <i class="fas fa-chalkboard-teacher"></i>
         Schools
       </a>
-      <a href="index-MBA.html" class="quick-link">
+      <a href="1010MBA PAGE.HTML" class="quick-link">
         <i class="fas fa-university"></i>
         MBA
       </a>
