--- a/1010school page.html
+++ b/1010school page.html
@@ -199,7 +199,7 @@
 <body>
 
   <div class="container">
-    <img src="https://cdnl.iconscout.com/lottie/premium/thumb/under-construction-board-4868296-4047934.gif" alt="Under Construction">
+    <img src="https://th.bing.com/th/id/OIP.2BUx01hD26IWX4OvrENybgHaDq?r=0&w=620&h=307&rs=1&pid=ImgDetMain&cb=idpwebpc2" alt="Under Construction">
     <h1>School Portal 🏫<br> Under Construction</h1>
     <p>
       We're building an innovative platform for <strong>School Education</strong> with comprehensive tools for
@@ -213,7 +213,7 @@
     <p class="coming-soon">Launching Soon... Stay Tuned! ✏️</p>
 
     <a class="action-button" href="index-school.html" target="_blank">
-      LEARN MORE ➔
+      VIEW OUR WORK ➔
     </a>
 
     <div class="footer">
