--- a/1010intermediate.html
+++ b/1010intermediate.html
@@ -199,7 +199,7 @@
 <body>
 
   <div class="container">
-    <img src="https://giffiles.alphacoders.com/158/158674.gif" alt="Under Construction">
+    <img src="https://www.pngkey.com/png/detail/33-330415_nav-srijan-welfare-society-web-under-construction-png.png" alt="Under Construction">
     <h1>Intermediate Portal 🚧<br> Under Construction</h1>
     <p>
       We're building a comprehensive platform for <strong>Intermediate Education</strong> with advanced tools for 
@@ -213,7 +213,7 @@
     <p class="coming-soon">Launching Soon... Stay Tuned! 📚</p>
 
     <a class="action-button" href="index-intermediate.html" target="_blank">
-      VIEW PREVIEW ➔
+      VIEW OUR WORK ➔
     </a>
 
     <div class="footer">
