--- a/1010pharma page.html
+++ b/1010pharma page.html
@@ -205,7 +205,7 @@
 <body>
 
   <div class="container">
-    <img src="https://giffiles.alphacoders.com/158/158674.gif" alt="Under Construction">
+    <img src="https://www.pngitem.com/pimgs/m/571-5718225_website-under-construction-cartoon-hd-png-download.png" alt="Under Construction">
     <h1>PHARMA Portal 🚧<br> Under Construction</h1>
     <p>
       We're currently building this page with advanced features for the <strong>Complete Pharma Guide</strong>.  
